# hyperion.ng

./: .gitmodules  CMakeLists.txt  CompileHowto.md
assets/webconfig/: index.html
assets/webconfig/i18n/: de.json  en.json
assets/webconfig/js/: kodi.js  wizard.js
config/: hyperion.config.json.commented
dependencies/: CMakeLists.txt
include/blackborder/: BlackBorderDetector.h
include/hyperion/: ImageToLedsMap.h
include/protoserver/: ProtoConnection.h  ProtoServer.h
libsrc/hyperion/: ImageToLedsMap.cpp
libsrc/protoserver/: CMakeLists.txt  ProtoClientConnection.cpp  ProtoClientConnection.h  ProtoConnection.cpp  ProtoConnectionWrapper.cpp  ProtoServer.cpp  hyperion_reply.fbs  hyperion_request.fbs
src/hyperion-aml/: CMakeLists.txt
src/hyperion-dispmanx/: CMakeLists.txt
src/hyperion-framebuffer/: CMakeLists.txt
src/hyperion-osx/: CMakeLists.txt
src/hyperion-remote/: JsonConnection.cpp  JsonConnection.h  hyperion-remote.cpp
src/hyperion-v4l2/: CMakeLists.txt
src/hyperion-x11/: CMakeLists.txt
